# mraa

./: .gitignore  CMakeLists.txt
api/mraa/: types.h
include/arm/: rockpis.h
sntest/: CMakeLists.txt  i2c_sntest.cpp  i2c_sntest.h  main.cpp  main.h  robot_sntest.cpp  robot_sntest.h  wifi_sntest.cpp
sntest/share/udp/: socket.h
sntestCM4/: CMakeLists.txt  i2c_sntestCM4.cpp  i2c_sntestCM4.h  main.cpp  main.h  robot_sntestCM4.cpp  robot_sntestCM4.h  wifi_sntestCM4.cpp  wifi_sntestCM4.h
src/: CMakeLists.txt
src/arm/: arm.c  rockpis.c
